logs/dag_id=my_spotify_dag/run_id=manual__2024-05-25T164331.116757+0000/task_id=create_table_task/attempt=2.log
[2024-05-25T16:44:58.052+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-25T16:44:58.078+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: my_spotify_dag.create_table_task manual__2024-05-25T16:43:31.116757+00:00 [queued]>
[2024-05-25T16:44:58.084+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: my_spotify_dag.create_table_task manual__2024-05-25T16:43:31.116757+00:00 [queued]>
[2024-05-25T16:44:58.085+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 6
[2024-05-25T16:44:58.097+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_table_task> on 2024-05-25 16:43:31.116757+00:00
[2024-05-25T16:44:58.116+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=135) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-05-25T16:44:58.117+0000] {standard_task_runner.py:63} INFO - Started process 137 to run task
[2024-05-25T16:44:58.117+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'my_spotify_dag', 'create_table_task', 'manual__2024-05-25T16:43:31.116757+00:00', '--job-id', '4', '--raw', '--subdir', 'DAGS_FOLDER/spotify_dag.py', '--cfg-path', '/tmp/tmpljj683aa']
[2024-05-25T16:44:58.118+0000] {standard_task_runner.py:91} INFO - Job 4: Subtask create_table_task
[2024-05-25T16:44:58.163+0000] {task_command.py:426} INFO - Running <TaskInstance: my_spotify_dag.create_table_task manual__2024-05-25T16:43:31.116757+00:00 [running]> on host 146d694e16a6
[2024-05-25T16:44:58.229+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Kaz' AIRFLOW_CTX_DAG_ID='my_spotify_dag' AIRFLOW_CTX_TASK_ID='create_table_task' AIRFLOW_CTX_EXECUTION_DATE='2024-05-25T16:43:31.116757+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-25T16:43:31.116757+00:00'
[2024-05-25T16:44:58.232+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-25T16:44:58.243+0000] {sql.py:276} INFO - Executing: 
                create table if not exits my_listened_song(
                    song_name varchar(50),
                    artis_name varchar(50),
                    album_name varchar(50),
                    release year,
                    played_at datetime,
                    CONSTRAINT primary_key_constraint PRIMARY KEY (played_at)
                )
                
[2024-05-25T16:44:58.254+0000] {base.py:84} INFO - Using connection ID 'postgre_spotify_sql' for task execution.
[2024-05-25T16:44:58.267+0000] {base.py:84} INFO - Using connection ID 'postgre_spotify_sql' for task execution.
[2024-05-25T16:44:58.323+0000] {sql.py:470} INFO - Running statement: 
                create table if not exits my_listened_song(
                    song_name varchar(50),
                    artis_name varchar(50),
                    album_name varchar(50),
                    release year,
                    played_at datetime,
                    CONSTRAINT primary_key_constraint PRIMARY KEY (played_at)
                )
                , parameters: None
[2024-05-25T16:44:58.339+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-25T16:44:58.340+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "exits"
LINE 2:                 create table if not exits my_listened_song(
                                            ^

[2024-05-25T16:44:58.350+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=my_spotify_dag, task_id=create_table_task, run_id=manual__2024-05-25T16:43:31.116757+00:00, execution_date=20240525T164331, start_date=20240525T164458, end_date=20240525T164458
[2024-05-25T16:44:58.359+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 4 for task create_table_task (syntax error at or near "exits"
LINE 2:                 create table if not exits my_listened_song(
                                            ^
; 137)
[2024-05-25T16:44:58.372+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-25T16:44:58.381+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-05-25T16:44:58.390+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-25T16:44:58.392+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
